Cibyl (19)
	* Split startup (from start.o) - this is now split in one call to
	initialize (and run global constructors), start main() and then to run
	global destructors

	* strncmp off-by-one bug fixed (Ehud Shabtai)

	* The C++ translator Makefile now handles proper dependencies

	* Implemented function colocation in methods for the C++
	translator. All important optimizations from the Python translator
	have now been implemented in the C++ ditto

	* Fixed bug in looking up function addresses in methods

	* Added mkdir/rmdir/remove for JSR075 and added these to the test
	cases

	* Some more panic cases to handle broken binaries etc in a good way
	and added gcov tests to improve the quality of the C++ translator

	* More Object methods implemented, including wait() and notify() which
	can be used to provide synchronization between threads

	* Added option to control thread safety and reorganized the code to
	support this. This is still off by default but can be enabled by the
	--thread-safe option to cibyl-mips2java

	* Inlining of builtins (softfloat operations) has now been implemented
	in the C++ translator as well. Most important optimizations except for
	function colocation are now present in the C++ translator

	* The C++ translator now inlines lb/lh/lbu/lhu/sb/sh instructions as
	well (which the Python translator doesn't). This is done if the size
	of the method is small enough.

	* Honor the --only-translate option for C++ as well

	* Prune unused functions also in the C++ translator

	* Implemented the 32-bit mul/div optimization for the C++ translator
	as well. This is on by default and cannot be turned off

	* Added more sanity checks throughout the code, e.g., for snprintfs

	* Implemented splitting classes for C++ as well. This is needed as a
	workaround for blackberry problems.

	* Implemented call a table hierarchy in the C++ translator. This is
	needed as a workaround for problems on some phones
