@@ -1,0 +1,3 @@
+	public static final int NOPH_Canvas_get() {
+		return Syscalls.canvasHandle;
+	}
