@@ -1,3 +1,0 @@
-	public static final int NOPH_GameCanvas_get() {
-		return Syscalls.canvasHandle;
-	}
